# composable-3d_poc

./: .gitignore  README.md
app/: .env  .env.localnet  index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  config.ts
app/src/rpc-calls/: objects.ts
app/src/types/: anchor.ts  object3d.ts  slot.ts  transform.ts
move/poc/sources/: object3d.move  transform.move
setup/: local_faucet.sh  package.json  pnpm-lock.yaml  publish.sh
setup/src/: attach-object.ts  config.ts  consts.ts  insert-anchor.ts  insert-slot.ts  mint-object.ts
wasm-canvas/: Cargo.toml
wasm-canvas/src/: js.rs  lib.rs  nft_object.rs  web_asset_io.rs
