[package]
name = "wasm-canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"

bevy = { version = "0.11.3", features = ["default", "jpeg"] }
bevy_panorbit_camera = "0.8.0"
# bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input.git" }

js-sys = "0.3.64"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Window", "Response"] }

